--- a/week-2/berkshire/my-berkshire-site.html
+++ b/week-2/berkshire/my-berkshire-site.html
@@ -1,13 +1,13 @@
 <!Doctype HTML>
 <!-- 
 - What was it like to translate your previous learning with HTML into an actual site?
-It was a great experience. It gave the opportunity to put in practice what I have learned so far. And it was a bit challenging but I had fun with it.
+It was a great experience. It gave me the opportunity to put in practice what I have learned so far. And it was a bit challenging but I had fun with it.
 
 - How was it researching and using semantic HTML5 elements?
-Researching was easy; there are a lot of resources that talk about semantic HTML5 elements. Using them is really helpful because they are meaningful for example, <header>.<footer>,<table><nav> all offer a direct meaning of their function. There it makes web developers' life easier.
+Researching was easy; there are a lot of resources that talk about semantic HTML5 elements. Using them is really helpful because they are meaningful for example, <header>, <footer>, <table>, <nav> all offers a direct meaning of their function. Therefore it makes web developers' life much easier.
 
 - How did you do at keeping to best practices (i.e. no formatting in the HTML).
-I tried to establish a good skeleton while staying away from formatting
+I tried to establish a good skeleton while staying away from formatting.
 
 - What seems good and bad about HTML?
 According to my research HTML comes with a great improvements. It brings new refinements that makes web developing even easier, especially for a beginner like myself.
@@ -16,59 +16,38 @@ According to my research HTML comes with a great improvements. It brings new ref
 I try to implement the very basics of a web page to start with such as: he Html tags, the head tags, the title tags, and the body tags. From there I try to remember what type of contents should go in each of these tags.
 
 -->
+
+<!Doctype html>
 <html>
 	<head>
-		<title>Berkshire Hathaway Inc</title>
+		<title>Berkshire</title>
 	</head>
 	<body>
-	<p> Berkshire Hathaway INC. 3555 Farnam Street Omaha, NE 68131 Official Home Page</p>
-	<ul>
-		<li>
-		  <a href="#">A Message From Warren E Buffet </a>
-		  </li>
-		  <li>
-		  <a href="#">Annual & Interim Reports</a><p>Updated November 6, 2015</p>
-		  <li>	
-		   <a href="#">Special Letter From Warren & Charlie RE:Past,n Present and Future</a>
-		   </li>
-		  <li>	
-		   <a href="#">Links to Berkshire Subsidiary Companies</a>
-		  <li>	
-		   <a href="#">Corporaete Governance</a>
-		  </li>	
-		   <li>	
-		   <a href="#">Owner's Manual</a>
-		   </li>
-		    <li>	
-		   <a href="#">Letters from Warren E. Buffet Regarding Pledges to Make Gifts of Berkshire Stock</a>
-		   </li>
-		    <li>	
-		   <a href="#">News Releases</a><p>Updated February 16, 2016</p>
-		   </li>
-		    <li>	
-		   <a href="#">Warren Buffets Letters to Berkshire Shareholders</a><p>Updated February 28, 2015</p>
-		   </li>
-		    <li>	
-		   <a href="#">Charlie Munger's Letters to Wesco Shareholders</a>
-		   </li>
-		    <li>	
-		   <a href="#">Annual Meetings Iformation</a>
-		    <li>	
-		   <a href="#">Celebrating 50 years of profitable Partnership</a><p>(A commemorative book first sold at the 2015 Annual Meeting and Now for sale on eBay.)</p>
-		    <li>	
-		   <a href="#">Comparative Rights and Relative Prices of Class A and B Stock</a>
-		   </li>
-		    <li>	
-		   <a href="#">Berkshire Activewear</a>
-		   </li>
-	</ul>
-	<img src="../imgs/geico.png" style="width:60px"><p>FOR A FREE CAR INSURTANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY<a href ="#">WWWW.GEICO.COM</a> OR CALL 1-888-395-6349, 24 HOURS A DAY</p>
-	<p>If you have any comments about our WEB page, you can either write us at the address shown above or e-mail us at<a href ="#">www.berkshire@berkshirehattatway.com</a> However, due to the limited number of personnel in our corporate office, we are unable to provide a direct response.</p>
+	<header>Berkshire Hathaway INC. 3555 Farnam Street Omaha, NE 68131 Official Home Page</header>
+  	<div>
+  		<ul>
+  			<li><a href="#">A Message From Warren E.Buffet</a></li>
+  			<li><a href="#">Annual & Interim Reports</a></li><footer>Updated November 6, 2015</footer>
+  			<li><a href="#">Special Letters From Warren & Charlie RE:Past,Present and Future</a></li>
+  			<li><a href="#">Links to SEC Filings</a></li>
+  			<li><a href="#">Links to Berkshire Subsidiary Companies</a></li>
+  			<li><a href="#">Corporate Governance</a></li>
+  			<li><a href="#">Owner's Manual</a></li>
+  			<li><a href="#">Letters from Warren E.Buffet Regarding Pledges to Make Gifts of Berkshire Stock</a></li>
+  			<li><a href="#">News Releases</a></li><footer>Updated February 16, 2016</footer>
+  			<li><a href="#">Warren Buffett's Letters to Berkshire Shareholders</a></li><footer>Updated February 28, 2015</footer>
+  			<li><a href="#">Annual Meetings Information</a></li>
+  			<li><a href="#">Celebrating 50 years of profitable Partnership</a></li><footer>(A commemorative book first sold at the 2015 Annual Meeting and now for sale on eBay.)</footer>
+  			<li><a href="#">Comparative Rights and Relative Prices of Class A and B Stock</a></li>
+  			<li><a href="#">Berkshire Activewear</a></li>
+  		</ul>
+  	</div>
+    <img src="../imgs/geico.png" style="width:60px"><p>FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY<a href ="#">WWWW.GEICO.COM</a> OR CALL 1-888-395-6349, 24 HOURS A DAY</p>
+	</body>
 	<nav>
 		<a href="#">Legal Disclaimer</a>
 	</nav>
 	<footer>
-		Copyright© 1978-2016 Berkshire Hathaway Inc.
+		Copyright&copy; 1978-2016 Berkshire Hathaway Inc.
 	</footer>
-	</body>
 </html>
