Add CSS to Berkshire

--- a/week-2/berkshire/my-berkshire-site.html
+++ b/week-2/berkshire/my-berkshire-site.html
@@ -20,6 +20,8 @@ I try to implement the very basics of a web page to start with such as: he Html 
 <!Doctype html>
 <html>
 	<head>
+<link rel="stylesheet" type="text/css" href="stylesheets/my-berkshire-stylesheet.css">
+
 		<title>Berkshire</title>
 	</head>
 	<body>
